clusters/kubenuc/apps/jenkins/manifests/networkpolicy-default-deny-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: jenkins
spec:
  podSelector: {}
  policyTypes:
    - Ingress
